# 优化 PullRecyclerView增加处理和子view（viewpager）冲突的函数

--- a/app/src/main/res/layout/activity_designsupport.xml
+++ b/app/src/main/res/layout/activity_designsupport.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ **********************************************************
+  ~   author   colin
+  ~   company  fosung
+  ~   email    wanglin2046@126.com
+  ~   date     16-11-1 下午2:39
+  ~ *********************************************************
+  -->
+
 <android.support.design.widget.CoordinatorLayout android:id="@+id/main_content"
                                                  xmlns:android="http://schemas.android.com/apk/res/android"
                                                  xmlns:app="http://schemas.android.com/apk/res-auto"
