--- a/app/src/main/res/layout/activity_designsupport1.xml
+++ b/app/src/main/res/layout/activity_designsupport1.xml
@@ -1,3 +1,12 @@
+<!--
+  ~ **********************************************************
+  ~   author   colin
+  ~   company  fosung
+  ~   email    wanglin2046@126.com
+  ~   date     16-11-1 下午2:39
+  ~ *********************************************************
+  -->
+
 <android.support.design.widget.CoordinatorLayout android:id="@+id/main_content"
                                                  xmlns:android="http://schemas.android.com/apk/res/android"
                                                  xmlns:app="http://schemas.android.com/apk/res-auto"
