--- a/libGui/src/main/res/layout/gui_view_tabview.xml
+++ b/libGui/src/main/res/layout/gui_view_tabview.xml
@@ -11,7 +11,7 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/iv_tabivew"
+        android:id="@+id/iv_tabview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/ll_tabview"
