--- a/libGui/src/main/res/layout/gui_view_swipemenu_pullrecycler.xml
+++ b/libGui/src/main/res/layout/gui_view_swipemenu_pullrecycler.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.fosung.gui.ZSwipeRefreshLayout android:id="@+id/swipeRefreshLayout"
-                                                 xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent">
+<com.fosung.gui.swiperefreshlayout.ZSwipeRefreshLayout android:id="@+id/swipeRefreshLayout"
+                                                       xmlns:android="http://schemas.android.com/apk/res/android"
+                                                       android:layout_width="match_parent"
+                                                       android:layout_height="match_parent">
 
 
     <FrameLayout
@@ -29,4 +29,4 @@
 
 
     </FrameLayout>
-</com.fosung.gui.ZSwipeRefreshLayout>
+</com.fosung.gui.swiperefreshlayout.ZSwipeRefreshLayout>
