--- a/app/src/main/res/layout/activity_designsupport.xml
+++ b/app/src/main/res/layout/activity_designsupport.xml
@@ -53,7 +53,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.fosung.gui.pullrecyclerview.PullRecyclerView
+    <com.zcolin.gui.zrecyclerview.ZRecyclerView
         android:id="@+id/pullLoadMoreRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
