--- a/app/src/main/res/layout/fragment_pullrecycler.xml
+++ b/app/src/main/res/layout/fragment_pullrecycler.xml
@@ -12,7 +12,7 @@
                 android:layout_height="match_parent"
     >
 
-    <com.fosung.gui.pullrecyclerview.PullRecyclerView
+    <com.zcolin.gui.pullrecyclerview.PullRecyclerView
         android:id="@+id/pullLoadMoreRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
