--- a/app/src/main/res/layout/fragment_superrecycler.xml
+++ b/app/src/main/res/layout/fragment_superrecycler.xml
@@ -12,7 +12,7 @@
                 android:layout_height="match_parent"
     >
 
-    <com.fosung.gui.superrecyclerview.SuperRecyclerView
+    <com.zcolin.gui.zrecyclerview.ZRecyclerView
         android:id="@+id/pullLoadMoreRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
