--- a/libGui/src/main/res/layout/gui_view_swiperefresh_webview.xml
+++ b/libGui/src/main/res/layout/gui_view_swiperefresh_webview.xml
@@ -3,7 +3,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
 
-    <com.fosung.gui.swiperefreshlayout.ZSwipeRefreshLayout
+    <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipelayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -13,7 +13,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_centerInParent="true"/>
-    </com.fosung.gui.swiperefreshlayout.ZSwipeRefreshLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <ProgressBar
         android:id="@+id/progressBar"
