# 增加outlib，作为杂项收录包，不具有通用性的，但是封装过为以后项目使用的放在此包中

--- a/app/src/main/res/layout/activity_richtextview.xml
+++ b/app/src/main/res/layout/activity_richtextview.xml
@@ -8,7 +8,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin">
 
 
-    <com.zcolin.usedemo.views.richtext.RichTextView
+    <com.zcolin.outlib.views.richtext.RichTextView
 
         android:id="@+id/tv_news_detail_body"
         android:layout_width="match_parent"
