--- a/app/src/main/res/layout/activity_richedittextview.xml
+++ b/app/src/main/res/layout/activity_richedittextview.xml
@@ -8,7 +8,7 @@
             android:paddingTop="@dimen/activity_vertical_margin">
 
 
-    <com.zcolin.usedemo.views.richtext.RichEditTextView
+    <com.zcolin.outlib.views.richtext.RichEditTextView
         android:id="@+id/tv_news_detail_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
