# 视频播放库版本更新

--- a/app/src/main/res/layout/activity_ijk_videoplay.xml
+++ b/app/src/main/res/layout/activity_ijk_videoplay.xml
@@ -4,11 +4,11 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <com.superplayer.library.SuperPlayer
+    <com.zplayer.library.ZPlayer
         android:id="@+id/view_super_player"
         android:layout_width="match_parent"
         android:layout_height="210dp">
-    </com.superplayer.library.SuperPlayer>
+    </com.zplayer.library.ZPlayer>
 
     <TextView
         android:id="@+id/tv_replay"
