--- a/app/src/main/res/layout/activity_itemarrange.xml
+++ b/app/src/main/res/layout/activity_itemarrange.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_app"
         android:layout_width="match_parent"
@@ -13,4 +13,4 @@
         android:clipToPadding="false"
         android:paddingBottom="@dimen/dimens_mid"/>
 
-</LinearLayout>
+</FrameLayout>
