--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,31 +7,33 @@
   ~   date     16-11-1 下午2:39
   ~ *********************************************************
   -->
+<layout>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <com.zcolin.gui.ZTabView
-        android:id="@+id/view_tabview"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary"
-        android:orientation="horizontal"/>
+        android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/divider"
-        layout="@layout/gui_view_divider"
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_above="@id/view_tabview"/>
+        <com.zcolin.gui.ZTabView
+            android:id="@+id/view_tabview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorPrimary"
+            android:orientation="horizontal"/>
 
-    <com.zcolin.gui.ZViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/divider"/>
+        <include
+            android:id="@+id/divider"
+            layout="@layout/gui_view_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_above="@id/view_tabview"/>
 
-</RelativeLayout>
+        <com.zcolin.gui.ZViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/divider"/>
+
+    </RelativeLayout>
+</layout>
